# treehacks2026

./: .gitignore  README.md  main.py  requirements.txt  run.py
app/: __init__.py  main.py
backend/: README.md  app.py  claude.py  coder.py  db.py  github_client.py  llm.py  local_sandbox.py  main.py  modal_sandbox.py  models.py  pyproject.toml  requirements.txt  sandbox.py  testing.py
backend/poke/: main.py  poke_notifier.py
backend/supabase/migrations/: 00005_user_feedback.sql
webapp/: CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml
webapp/.cursor/: cursor_rules.md
webapp/app/: actions.ts  globals.css  layout.tsx  page.tsx
webapp/app/api/repos/: route.ts
webapp/app/auth/login/: page.tsx
webapp/app/auth/sign-up/: page.tsx
webapp/app/automations/: page.tsx
webapp/app/dashboard/: page.tsx
webapp/app/features/: page.tsx
webapp/app/features/[id]/: page.tsx
webapp/components/: ascii-background.tsx  create-button.tsx  dashboard-content.tsx  login-form.tsx  plan-review.tsx  project-detail.tsx  sidebar-user-collapsed.tsx  sidebar-user-dropdown.tsx  sidebar-user.tsx  sidebar.tsx  sign-up-form.tsx  tweet-ticker.tsx  update-password-form.tsx
webapp/components/ui/: button.tsx  card.tsx  dialog.tsx  light-rays.tsx  pointer-highlight.tsx
webapp/lib/: data.ts
webapp/lib/supabase/: server.ts
x-api/: main.py
