[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.79.0",
    "fastapi>=0.115.0",
    "modal>=1.3.3",
    "xai-sdk>=1.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "supabase>=2.28.0",
    "uvicorn>=0.34.0",
]
